# Core-8

./: .gitignore  CMakeLists.txt  README.md
src/: binary.h  main.cpp
src/assembler/: ReadMe.md  assembler.cpp  assembler.h  instructions.cpp  instructions.h
src/cpu/: cpu.cpp  cpu.h
src/memory/: ram.cpp  ram.h
tests/: byte_code.cpp  raw_cpu.cpp  run_thru.cpp  test.ce
